Changed css and marked active strategy
I changed the CSS so the buttons look more modern and changed the font to the same one as in the config page.
The button corresponding to the active strategy has black font now.

Fixes #116

--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -6,7 +6,7 @@ html{
 	background-image:none;	background-color:#996699;
 }
 #container, html.embed{
-	background-color:#FFFFFF;
+	background-color:#F7F8FB;
 }
 .safari .wufoo input.file{
 	background:none;
