--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -1,384 +1,514 @@
 /* ----- Backgrounds ----- */
-html{
-	background-image:none;	background-color:#663366;
-}
-#logo{
-	background-image:none;	background-color:#996699;
-}
-#container, html.embed{
-	background-color:#F7F8FB;
-}
-.safari .wufoo input.file{
-	background:none;
-	border:none;
+
+html {
+	background-image: none;
+	background-color: #663366;
 }
 
-.wufoo li.focused{
-	background-color:#FFF7C0;
+#logo {
+	background-image: none;
+	background-color: #996699;
 }
-.wufoo .instruct{
-	background-color:#F5F5F5;
+
+#container,
+html.embed {
+	background-color: #F7F8FB;
+}
+
+.safari .wufoo input.file {
+	background: none;
+	border: none;
+}
+
+.wufoo li.focused {
+	background-color: #FFF7C0;
+}
+
+.wufoo .instruct {
+	background-color: #F5F5F5;
 }
 
 /* ----- Borders ----- */
-#container{
-	border:0 solid #cccccc;
-}
-.wufoo .info, .wufoo .paging-context{
-	border-bottom:1px dotted #CCCCCC;
-}
-.wufoo .section h3, .wufoo .captcha, #payment .paging-context{
-	border-top:1px dotted #CCCCCC;
-}
-.wufoo input.text, .wufoo textarea.textarea{
 
+#container {
+	border: 0 solid #cccccc;
 }
-.wufoo .instruct{
-	border:1px solid #E6E6E6;
+
+.wufoo .info,
+.wufoo .paging-context {
+	border-bottom: 1px dotted #CCCCCC;
 }
-.fixed .info{
-	border-bottom:none;
+
+.wufoo .section h3,
+.wufoo .captcha,
+#payment .paging-context {
+	border-top: 1px dotted #CCCCCC;
 }
-.wufoo li.section.scrollText{
-	border-color:#dedede;
+
+.wufoo input.text,
+.wufoo textarea.textarea {
+}
+
+.wufoo .instruct {
+	border: 1px solid #E6E6E6;
+}
+
+.fixed .info {
+	border-bottom: none;
+}
+
+.wufoo li.section.scrollText {
+	border-color: #dedede;
 }
 
 /* ----- Typography ----- */
-.wufoo .info h2{
-	font-size:160%;
-	font-family:inherit;
-	font-style:normal;
-	font-weight:normal;
-	color:#000000;
-}
-.wufoo .info div{
-	font-size:95%;
-	font-family:inherit;
-	font-style:normal;
-	font-weight:normal;
-	color:#444444;
-}
-.wufoo .section h3{
-	font-size:110%;
-	font-family:inherit;
-	font-style:normal;
-	font-weight:normal;
-	color:#000000;
-}
-.wufoo .section div{
-	font-size:85%;
-	font-family:inherit;
-	font-style:normal;
-	font-weight:normal;
-	color:#444444;
+
+.wufoo .info h2 {
+	font-size: 160%;
+	font-family: inherit;
+	font-style: normal;
+	font-weight: normal;
+	color: #000000;
 }
 
-.wufoo label.desc, .wufoo legend.desc{
-	font-size:95%;
-	font-family:inherit;
-	font-style:normal;
-	font-weight:bold;
-	color:#444444;
+.wufoo .info div {
+	font-size: 95%;
+	font-family: inherit;
+	font-style: normal;
+	font-weight: normal;
+	color: #444444;
 }
 
-.wufoo label.choice{
-	font-size:100%;
-	font-family:inherit;
-	font-style:normal;
-	font-weight:normal;
-	color:#444444;
+.wufoo .section h3 {
+	font-size: 110%;
+	font-family: inherit;
+	font-style: normal;
+	font-weight: normal;
+	color: #000000;
 }
-.wufoo input.text, .wufoo textarea.textarea, .wufoo input.file, .wufoo select.select{
-	font-style:normal;
-	font-weight:normal;
-	color:#333333;
-	font-size:100%;
+
+.wufoo .section div {
+	font-size: 85%;
+	font-family: inherit;
+	font-style: normal;
+	font-weight: normal;
+	color: #444444;
 }
+
+.wufoo label.desc,
+.wufoo legend.desc {
+	font-size: 95%;
+	font-family: inherit;
+	font-style: normal;
+	font-weight: bold;
+	color: #444444;
+}
+
+.wufoo label.choice {
+	font-size: 100%;
+	font-family: inherit;
+	font-style: normal;
+	font-weight: normal;
+	color: #444444;
+}
+
+.wufoo input.text,
+.wufoo textarea.textarea,
+.wufoo input.file,
+.wufoo select.select {
+	font-style: normal;
+	font-weight: normal;
+	color: #333333;
+	font-size: 100%;
+}
+
 /* Custom Fonts Break Dropdown Selection in IE */
-.wufoo input.text, .wufoo textarea.textarea, .wufoo input.file{ 
-	font-family:inherit;
+
+.wufoo input.text,
+.wufoo textarea.textarea,
+.wufoo input.file {
+	font-family: inherit;
 }
 
-
-.wufoo li div, .wufoo li span, .wufoo li div label, .wufoo li span label{
-	font-family:inherit;
-	color:#444444;
-}
-.safari .wufoo input.file{ /* Webkit */
-	font-size:100%;
-	font-family:inherit;
-	color:#444444;
-}
-.wufoo .instruct small{
-	font-size:80%;
-	font-family:inherit;
-	font-style:normal;
-	font-weight:normal;
-	color:#444444;
+.wufoo li div,
+.wufoo li span,
+.wufoo li div label,
+.wufoo li span label {
+	font-family: inherit;
+	color: #444444;
 }
 
-.altInstruct small, li.leftHalf small, li.rightHalf small,
-li.leftThird small, li.middleThird small, li.rightThird small,
-.iphone small{
-	color:#444444 !important;
+.safari .wufoo input.file {
+	/* Webkit */
+
+	font-size: 100%;
+	font-family: inherit;
+	color: #444444;
+}
+
+.wufoo .instruct small {
+	font-size: 80%;
+	font-family: inherit;
+	font-style: normal;
+	font-weight: normal;
+	color: #444444;
+}
+
+.altInstruct small,
+li.leftHalf small,
+li.rightHalf small,
+li.leftThird small,
+li.middleThird small,
+li.rightThird small,
+.iphone small {
+	color: #444444 !important;
 }
 
 /* ----- Button Styles ----- */
 
-.wufoo input.btTxt{
-
+.wufoo input.btTxt {
 }
 
 /* ----- Highlight Styles ----- */
 
-.wufoo li.focused label.desc, .wufoo li.focused legend.desc,
-.wufoo li.focused div, .wufoo li.focused span, .wufoo li.focused div label, .wufoo li.focused span label,
-.safari .wufoo li.focused input.file{ 
-	color:#000000;
+.wufoo li.focused label.desc,
+.wufoo li.focused legend.desc,
+.wufoo li.focused div,
+.wufoo li.focused span,
+.wufoo li.focused div label,
+.wufoo li.focused span label,
+.safari .wufoo li.focused input.file {
+	color: #000000;
 }
 
 /* ----- Confirmation ----- */
 
-.confirm h2{
-	font-family:inherit;
-	color:#444444;
+.confirm h2 {
+	font-family: inherit;
+	color: #444444;
 }
-a.powertiny b, a.powertiny em{
-	color:#1a1a1a !important;
+
+a.powertiny b,
+a.powertiny em {
+	color: #1a1a1a !important;
 }
-.embed a.powertiny b, .embed a.powertiny em{
-	color:#1a1a1a !important;
+
+.embed a.powertiny b,
+.embed a.powertiny em {
+	color: #1a1a1a !important;
 }
 
 /* ----- Pagination ----- */
 
-.pgStyle1 var, .pgStyle2 var, .pgStyle2 em, .page1 .pgStyle2 var, .pgStyle1 b, .wufoo .buttons .marker{
-	font-family:inherit;
-	color:#444444;
-}
-.pgStyle1 var, .pgStyle2 td{
-	border:1px solid #cccccc;
-}
-.pgStyle1 .done var{
-	background:#cccccc;
-}
-
-.pgStyle1 .selected var, .pgStyle2 var, .pgStyle2 var em{
-	background:#FFF7C0;
-	color:#000000;
-}
-.pgStyle1 .selected var{
-	border:1px solid #e6dead;
+.pgStyle1 var,
+.pgStyle2 var,
+.pgStyle2 em,
+.page1 .pgStyle2 var,
+.pgStyle1 b,
+.wufoo .buttons .marker {
+	font-family: inherit;
+	color: #444444;
 }
 
+.pgStyle1 var,
+.pgStyle2 td {
+	border: 1px solid #cccccc;
+}
+
+.pgStyle1 .done var {
+	background: #cccccc;
+}
+
+.pgStyle1 .selected var,
+.pgStyle2 var,
+.pgStyle2 var em {
+	background: #FFF7C0;
+	color: #000000;
+}
+
+.pgStyle1 .selected var {
+	border: 1px solid #e6dead;
+}
 
 /* Likert Backgrounds */
 
-.likert table{
-	background-color:#FFFFFF;
+.likert table {
+	background-color: #FFFFFF;
 }
-.likert thead td, .likert thead th{
-	background-color:#e6e6e6;
+
+.likert thead td,
+.likert thead th {
+	background-color: #e6e6e6;
 }
-.likert tbody tr.alt td, .likert tbody tr.alt th{
-	background-color:#f5f5f5;
+
+.likert tbody tr.alt td,
+.likert tbody tr.alt th {
+	background-color: #f5f5f5;
 }
 
 /* Likert Borders */
 
-.likert table, .likert th, .likert td{
-	border-color:#dedede;
+.likert table,
+.likert th,
+.likert td {
+	border-color: #dedede;
 }
-.likert td{
-	border-left:1px solid #cccccc;
+
+.likert td {
+	border-left: 1px solid #cccccc;
 }
 
 /* Likert Typography */
 
-.likert caption, .likert thead td, .likert tbody th label{
-	color:#444444;
-	font-family:inherit;
+.likert caption,
+.likert thead td,
+.likert tbody th label {
+	color: #444444;
+	font-family: inherit;
 }
-.likert tbody td label{
-	color:#575757;
-	font-family:inherit;
+
+.likert tbody td label {
+	color: #575757;
+	font-family: inherit;
 }
-.likert caption, .likert tbody th label{
-	font-size:95%;
+
+.likert caption,
+.likert tbody th label {
+	font-size: 95%;
 }
 
 /* Likert Hover */
 
-.likert tbody tr:hover td, .likert tbody tr:hover th, .likert tbody tr:hover label{
-	background-color:#FFF7C0;
-	color:#000000;
+.likert tbody tr:hover td,
+.likert tbody tr:hover th,
+.likert tbody tr:hover label {
+	background-color: #FFF7C0;
+	color: #000000;
 }
-.likert tbody tr:hover td{
-	border-left:1px solid #ccc69a;
+
+.likert tbody tr:hover td {
+	border-left: 1px solid #ccc69a;
 }
 
 /* ----- Running Total ----- */
 
-.wufoo #lola{
-	background:#e6e6e6;
+.wufoo #lola {
+	background: #e6e6e6;
 }
-.wufoo #lola tbody td{
-	border-bottom:1px solid #cccccc;
+
+.wufoo #lola tbody td {
+	border-bottom: 1px solid #cccccc;
 }
-.wufoo #lola{
-	font-family:inherit;
-	color:#444444;
+
+.wufoo #lola {
+	font-family: inherit;
+	color: #444444;
 }
-.wufoo #lola tfoot th{
-	color:#696969;
+
+.wufoo #lola tfoot th {
+	color: #696969;
 }
 
 /* ----- Report Styles ----- */
 
-.wufoo .wfo_graph h3{
-	font-size:95%;
-	font-family:inherit;
-	color:#444444;
+.wufoo .wfo_graph h3 {
+	font-size: 95%;
+	font-family: inherit;
+	color: #444444;
 }
-.wfo_txt, .wfo_graph h4{
-	color:#444444;
+
+.wfo_txt,
+.wfo_graph h4 {
+	color: #444444;
 }
-.wufoo .footer h4{
-	color:#000000;
+
+.wufoo .footer h4 {
+	color: #000000;
 }
-.wufoo .footer span{
-	color:#444444;
+
+.wufoo .footer span {
+	color: #444444;
 }
 
 /* ----- Number Widget ----- */
 
-.wfo_number{
-	background-color:#f5f5f5;
-	border-color:#dedede;
+.wfo_number {
+	background-color: #f5f5f5;
+	border-color: #dedede;
 }
-.wfo_number strong, .wfo_number em{
-	color:#000000;
+
+.wfo_number strong,
+.wfo_number em {
+	color: #000000;
 }
 
 /* ----- Chart Widget Border and Background Colors ----- */
 
-#widget, #widget body{
-	background:#FFFFFF;
+#widget,
+#widget body {
+	background: #FFFFFF;
 }
-.fcNav a.show{
-	background-color:#FFFFFF;
-	border-color:#cccccc;
+
+.fcNav a.show {
+	background-color: #FFFFFF;
+	border-color: #cccccc;
 }
-.fc table{
-	border-left:1px solid #dedede;	
+
+.fc table {
+	border-left: 1px solid #dedede;
 }
-.fc thead th, .fc .more th{
-	background-color:#dedede !important;
-	border-right:1px solid #cccccc !important;
+
+.fc thead th,
+.fc .more th {
+	background-color: #dedede !important;
+	border-right: 1px solid #cccccc !important;
 }
-.fc tbody td, .fc tbody th, .fc tfoot th, .fc tfoot td{
-	background-color:#FFFFFF;
-	border-right:1px solid #cccccc;
-	border-bottom:1px solid #dedede;
+
+.fc tbody td,
+.fc tbody th,
+.fc tfoot th,
+.fc tfoot td {
+	background-color: #FFFFFF;
+	border-right: 1px solid #cccccc;
+	border-bottom: 1px solid #dedede;
 }
-.fc tbody tr.alt td, .fc tbody tr.alt th, .fc tbody td.alt{
-	background-color:#f5f5f5;
+
+.fc tbody tr.alt td,
+.fc tbody tr.alt th,
+.fc tbody td.alt {
+	background-color: #f5f5f5;
 }
 
 /* ----- Chart Widget Typography Colors ----- */
 
-.fc caption, .fcNav, .fcNav a{
-	color:#444444;
+.fc caption,
+.fcNav,
+.fcNav a {
+	color: #444444;
 }
-.fc tfoot, 
+
+.fc tfoot,
 .fc thead th,
-.fc tbody th div, 
-.fc tbody td.count, .fc .cards tbody td a, .fc td.percent var,
-.fc .timestamp span{
-	color:#000000;
+.fc tbody th div,
+.fc tbody td.count,
+.fc .cards tbody td a,
+.fc td.percent var,
+.fc .timestamp span {
+	color: #000000;
 }
-.fc .indent .count{
-	color:#4b4b4b;
+
+.fc .indent .count {
+	color: #4b4b4b;
 }
-.fc .cards tbody td a span{
-	color:#7d7d7d;
+
+.fc .cards tbody td a span {
+	color: #7d7d7d;
 }
 
 /* ----- Chart Widget Hover Colors ----- */
 
-.fc tbody tr:hover td, .fc tbody tr:hover th,
-.fc tfoot tr:hover td, .fc tfoot tr:hover th{
-	background-color:#FFF7C0;
+.fc tbody tr:hover td,
+.fc tbody tr:hover th,
+.fc tfoot tr:hover td,
+.fc tfoot tr:hover th {
+	background-color: #FFF7C0;
 }
-.fc tbody tr:hover th div, .fc tbody tr:hover td, .fc tbody tr:hover var,
-.fc tfoot tr:hover th div, .fc tfoot tr:hover td, .fc tfoot tr:hover var{
-	color:#000000;
+
+.fc tbody tr:hover th div,
+.fc tbody tr:hover td,
+.fc tbody tr:hover var,
+.fc tfoot tr:hover th div,
+.fc tfoot tr:hover td,
+.fc tfoot tr:hover var {
+	color: #000000;
 }
 
 /* ----- Payment Summary ----- */
 
-.invoice thead th, 
-.invoice tbody th, .invoice tbody td,
+.invoice thead th,
+.invoice tbody th,
+.invoice tbody td,
 .invoice tfoot th,
 .invoice .total,
-.invoice tfoot .last th, .invoice tfoot .last td,
-.invoice tfoot th, .invoice tfoot td{
-	border-color:#dedede;
+.invoice tfoot .last th,
+.invoice tfoot .last td,
+.invoice tfoot th,
+.invoice tfoot td {
+	border-color: #dedede;
 }
-.invoice thead th, .wufoo .checkNotice{
-	background:#f5f5f5;
+
+.invoice thead th,
+.wufoo .checkNotice {
+	background: #f5f5f5;
 }
-.invoice th, .invoice td{
-	color:#000000;
+
+.invoice th,
+.invoice td {
+	color: #000000;
 }
-#ppSection, #ccSection{
-	border-bottom:1px dotted #CCCCCC;
+
+#ppSection,
+#ccSection {
+	border-bottom: 1px dotted #CCCCCC;
 }
-#shipSection, #invoiceSection{
-	border-top:1px dotted #CCCCCC;
+
+#shipSection,
+#invoiceSection {
+	border-top: 1px dotted #CCCCCC;
 }
 
 /* Drop Shadows */
-
 /* - - - Local Fonts - - - */
-
 /* - - - Responsive - - - */
 
 @media only screen and (max-width: 480px) {
-	html{
-		background-color:#FFFFFF;
+	html {
+		background-color: #FFFFFF;
 	}
-	a.powertiny b, a.powertin em{
-		color:#1a1a1a !important;
+
+	a.powertiny b,
+	a.powertin em {
+		color: #1a1a1a !important;
 	}
 }
 
 /* - - - Custom Theme - - - */
 
 .click {
-	border:2px solid #79c127;
-	-webkit-border-radius: 3px; -moz-border-radius: 3px;border-radius: 3px;font-size:12px;font-family:arial black, sans-serif; padding: 10px 10px 10px 10px; text-decoration:none; display:inline-block;text-shadow: 2px 2px 0 rgba(0,0,0,0.3);font-weight:bold; color: #FFFFFF;
-	background-color: #95DA46; background-image: -webkit-gradient(linear, left top, left bottom, from(#95DA46), to(#3DB33D));
+	border: 2px solid #79c127;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
+	font-size: 12px;
+	font-family: arial black, sans-serif;
+	padding: 10px 10px 10px 10px;
+	text-decoration: none;
+	display: inline-block;
+	text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.3);
+	font-weight: bold;
+	color: #FFFFFF;
+	background-color: #95DA46;
+	background-image: -webkit-gradient(linear, left top, left bottom, from(#95DA46), to(#3DB33D));
 	background-image: -webkit-linear-gradient(top, #95DA46, #3DB33D);
-
 	font-size: medium;
 	color: white;
 	padding: 4px;
 	text-align: center;
 	min-width: 50px;
 	max-width: 100px;
-
 	border-radius: 5px;
 	margin: 5px;
 	/*float: left;*/
+
 	cursor: pointer;
 	-webkit-user-select: none;
 	height: 20px;
 }
 
 .click:hover {
-	border:2px solid #619b1f;
-	background-color: #7cc528; background-image: -webkit-gradient(linear, left top, left bottom, from(#7cc528), to(#308d30));
+	border: 2px solid #619b1f;
+	background-color: #7cc528;
+	background-image: -webkit-gradient(linear, left top, left bottom, from(#7cc528), to(#308d30));
 	background-image: -webkit-linear-gradient(top, #7cc528, #308d30);
 }
 
@@ -409,17 +539,20 @@ input[type=number] {
 	font-size: 1.1em;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
 	margin-bottom: 3px;
 	margin-top: 10px;
 }
 
 #saltbot-icon {
-	float:right;
-	margin-top:10px;
+	float: right;
+	margin-top: 10px;
 }
 
-body, html {
+body,
+html {
 	height: calc(100% - 18px);
 }
 
